--- a/.github/workflows/deploy-livekit-agent.yml
+++ b/.github/workflows/deploy-livekit-agent.yml
@@ -1,42 +1,53 @@
 name: Deploy LiveKit Agent
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+    push:
+        branches:
+            - main
+    workflow_dispatch:
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+    deploy:
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
+            - name: Set up Python
+              uses: actions/setup-python@v5
+              with:
+                  python-version: "3.10"
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-          pip install livekit livekit-agents
+            - name: Install dependencies
+              run: |
+                  pip install -r requirements.txt
+                  pip install livekit livekit-agents python-dotenv
 
-      - name: Configure LiveKit Agent
-        env:
-          LIVEKIT_API_KEY: ${{ secrets.LIVEKIT_API_KEY }}
-          LIVEKIT_API_SECRET: ${{ secrets.LIVEKIT_API_SECRET }}
-        run: |
-          echo "Configuring agent..."
-          # Optionally generate livekit.toml dynamically if needed
-          cat livekit.toml
+            - name: Install LiveKit CLI
+              run: |
+                  echo "Installing LiveKit CLI..."
+                  curl -sSL https://get.livekit.io/cli | bash
+                  sudo mv lk /usr/local/bin/lk
+                  lk version
 
-      - name: Deploy LiveKit Agent
-        env:
-          LIVEKIT_API_KEY: ${{ secrets.LIVEKIT_API_KEY }}
-          LIVEKIT_API_SECRET: ${{ secrets.LIVEKIT_API_SECRET }}
-        run: |
-          # Update or create the agent in LiveKit
-          lk agent update --config livekit.toml || lk agent create --config livekit.toml
+            - name: Configure LiveKit Agent
+              env:
+                  LIVEKIT_API_KEY: ${{ secrets.LIVEKIT_API_KEY }}
+                  LIVEKIT_API_SECRET: ${{ secrets.LIVEKIT_API_SECRET }}
+              run: |
+                  echo "Configuring agent..."
+                  cat livekit.toml
+
+            - name: Deploy LiveKit Agent
+              env:
+                  API_KEY: ${{ secrets.API_KEY }}
+                  LIVEKIT_URL: ${{ secrets.LIVEKIT_URL }}
+                  LIVEKIT_API_KEY: ${{ secrets.LIVEKIT_API_KEY }}
+                  LIVEKIT_API_SECRET: ${{ secrets.LIVEKIT_API_SECRET }}
+              run: |
+                  echo "Deploying LiveKit agent..."
+                  if ! lk agent update --config livekit.toml; then
+                    echo "Agent not found — creating a new one."
+                    lk agent create --config livekit.toml
+                  fi
