--- a/.github/workflows/deploy-livekit-agent.yml
+++ b/.github/workflows/deploy-livekit-agent.yml
@@ -19,8 +19,6 @@ jobs:
               with:
                   python-version: "3.10"
 
-
-
             - name: Install LiveKit CLI
               run: |
                   echo "Installing LiveKit CLI..."
@@ -47,7 +45,7 @@ jobs:
                   LIVEKIT_API_SECRET: ${{ secrets.LIVEKIT_API_SECRET }}
               run: |
                   echo "Deploying LiveKit agent..."
-                  if ! lk agent update --config livekit.toml; then
+                  if ! lk agent deploy --config livekit.toml; then
                     echo "Agent not found — creating a new one."
                     lk agent create --config livekit.toml
                   fi
